--- a/index.html
+++ b/index.html
@@ -3,7 +3,79 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dental design</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=arrow_downward,menu" />
+    
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
+    rel="stylesheet"/>
+
+
   </head>
-  <body></body>
+  <body>
+    <nav id="upper">
+      <div id="m-m">
+        <div><p id="menu-b">Menu</p></div>
+        <div id="menu-icon">
+          <span class="material-symbols-outlined">menu</span>
+        </div>
+      </div>
+
+      <div id="title">
+        <div id="den">DENTYTECH</div>
+      </div>
+
+      <div id="l-s">
+        <div id="login">Login</div>
+        <div id="sign-up">Sign Up</div>
+      </div>
+    </nav>
+
+    <nav id="middle">
+      <h1 id="h1-mid">Our Advantages</h1>
+
+      <div id="imag">
+        <img
+          id="imag-1"
+          class="img"
+          src="https://images.pexels.com/photos/29463577/pexels-photo-29463577/free-photo-of-moody-close-up-of-autumn-leaves-at-dusk.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          alt="scene-1"
+        />
+        <img
+          id="imag-2"
+          class="img"
+          src="https://images.pexels.com/photos/29463587/pexels-photo-29463587/free-photo-of-serene-autumn-forest-path-with-fallen-leaves.jpeg?auto=compress&cs=tinysrgb&w=600"
+          alt="scene-2"
+        />
+        <img
+          id="imag-3"
+          class="img"
+          src="https://images.pexels.com/photos/29463576/pexels-photo-29463576/free-photo-of-serene-autumn-forest-with-vibrant-foliage.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          alt="scene-3"
+        />
+
+        <img
+          id="imag-4"
+          class="img"
+          src="https://images.pexels.com/photos/775201/pexels-photo-775201.jpeg?auto=compress&cs=tinysrgb&w=600"
+          alt="scene-4"
+        />
+      </div>
+    </nav>
+
+    <nav id="down">
+      <p id="quote">Your Smile, Our Passion</p>
+      
+      <div id="arrow-down"><span class="material-symbols-outlined">
+        arrow_downward
+        </span></div>
+
+        <div id="social-icons">
+            <i class="ri-instagram-line"></i>
+            <i class="ri-twitter-x-fill"></i>
+            <i class="ri-facebook-line"></i>
+        </div>
+    </nav>
+  </body>
 </html>
